# lambdaworks-groth16-ts

./: .gitignore  README.md  package-lock.json  package.json  test.js  tsconfig.json  webpack.config.js
src/rust/: Cargo.toml
src/rust/src/: lib.rs
src/ts/: index.ts  types.ts
