[package]
name = "lambdaworks-groth16-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Mohd Ejaz Siddiqui <mohdejazsiddiqui@gmail.com>"]
description = "WebAssembly bindings for Lambdaworks Groth16"
repository = "https://github.com/mejaz/lambdaworks-groth16-ts"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1.7"

# Only include the lambdaworks-math crate for field elements
lambdaworks-math = { git = "https://github.com/lambdaclass/lambdaworks", branch = "main" }

getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"